--- a/pyt/pyproject.toml
+++ b/pyt/pyproject.toml
@@ -1,16 +1,19 @@
-[project]
+[tool.poetry]
 name = "TAALC"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "nagvalhm",email = "nagvalhm@yandex.ru"}
-]
+authors = ["Nikita Umerov <nagvalhm@yandex.ru>", "Pavel Pichugin"]
 readme = "README.md"
-requires-python = ">=3.10"
-dependencies = [
-]
+# requires-python = "<=3.10.1"
+
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.dependencies]
+python = "^3.10"
+epure = "^0.3.12"
+aiogram = "^3.20.0.post0"
