--- a/pyt/pyproject.toml
+++ b/pyt/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "TAALC"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Nikita Umerov <nagvalhm@yandex.ru>", "Pavel Pichugin"]
 readme = "README.md"
@@ -17,3 +17,8 @@ build-backend = "poetry.core.masonry.api"
 python = "^3.10"
 epure = "^0.3.12"
 aiogram = "^3.20.0.post0"
+
+
+[tool.poetry.urls]
+Homepage = "https://github.com/Pavelpich/TAALC"
+Source = "https://github.com/Pavelpich/TAALC"
