--- a/pyt/pyproject.toml
+++ b/pyt/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "TAALC"
-version = "0.1.1"
+version = "0.1.8"
 description = ""
 authors = ["Nikita Umerov <nagvalhm@yandex.ru>", "Pavel Pichugin"]
 readme = "README.md"
@@ -15,7 +15,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-epure = "^0.3.12"
+# epure = "^0.3.12"
 aiogram = "^3.20.0.post0"
 
 
