--- a/pyt/pyproject.toml
+++ b/pyt/pyproject.toml
@@ -15,7 +15,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-# epure = "^0.3.12"
+epure = "^0.3.12"
 aiogram = "^3.20.0.post0"
 
 
