--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "python",
             "request": "launch",
             // "program": "${workspaceFolder}/pyt/TAALC/__main__.py",
-            "module": "TAALC",
+            "module": "marat",
             "cwd": "${workspaceFolder}/pyt",
             "console": "integratedTerminal",
             "args": ["--config", "./pyconfig.ini"],
@@ -86,7 +86,7 @@
             "request": "launch",            
             "justMyCode": true,
             "module": "compileall",
-            "args": ["TAALC"],
+            "args": ["marat"],
             "console": "integratedTerminal",
             "python": "${config:python_path}",
             "cwd": "${config:cwd}"
@@ -121,7 +121,7 @@
             "request": "launch",            
             "justMyCode": true,
             "module": "mypy",
-            "args": ["pyt/TAALC"],
+            "args": ["pyt/marat"],
             "console": "integratedTerminal",
             "python": "${config:python_path}",
         },
