--- a/marat.service
+++ b/marat.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 User=root
-ExecStart=/root/env/bin/python -m TAALC --token 797378:dsfkjhhkjfhgjksgkj
+ExecStart=/root/env/bin/python -m marat --token 797378:dsfkjhhkjfhgjksgkj
 Restart=always
 
 [Install]
