--- a/pyt/pyproject.toml
+++ b/pyt/pyproject.toml
@@ -17,6 +17,7 @@ build-backend = "poetry.core.masonry.api"
 python = "^3.10"
 epure = "^0.3.12"
 aiogram = "^3.20.0.post0"
+taalc = "^0.1.11"
 
 
 [tool.poetry.urls]
