--- a/pyt/pyproject.toml
+++ b/pyt/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "marat"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Nikita Umerov <nagvalhm@yandex.ru>"]
 readme = "README.md"
@@ -18,6 +18,8 @@ python = "^3.10"
 epure = "^0.3.12"
 aiogram = "^3.20.0.post0"
 taalc = "^0.1.11"
+pytest = "^8.3.5"
+pytest-asyncio = "^1.0.0"
 
 
 [tool.poetry.urls]
